# plaid-interface

./: README.md  add_user.py  database.py  initiate_user.py  passenger_wsgi.py  pyproject.toml  requirements.txt  run.py
app/: __init__.py  forms.py  models.py  routes.py
app/data/: beautifulsoup_With_Code_Only.csv  beautifulsoup_subsampled_1.csv  beautifulsoup_subsampled_40_1.csv  beautifulsoup_subsampled_40_4.csv  beautifulsoup_subsampled_representative.csv  cart.csv  django_With_Code_Only.csv  django_subsampled_40_1.csv  pandas_With_Code_Only.csv  pandas_subsampled_1.csv  pandas_subsampled_40_1.csv  pandas_subsampled_40_4.csv  pandas_subsampled_representative.csv  pytorch_With_Code_Only.csv
app/data/Examples/: Pandas_final_csv_format.csv  beautifulsoup_final_csv_format.csv  content.csv  potential_values.csv
app/static/css/: style.css
app/static/js/: main.js  slideshow.js
app/static/tutorial/: slide1.webm  slide2.webm  slide3.webm  slide4.webm  slide5.webm
app/templates/: base.html  canvas.html  login.html
